--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ url: "https://panossakkos.github.io"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-baseurl: /personal-jekyll-theme
+#baseurl: /personal-jekyll-theme
+baseurl: ""
 
 # Google tracking id
 
