update the content of home page

--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ type-speed: 10
 start-delay: 200
 delete-delay: 5000
 lines: # You can add HTML Tags in the Text
-  - text: "The lower you fall, the higher you'll fly."
-  - text: "Where’s your will to be weird?"
+  - text: "当你决定旅行的那一刻， 最困难的一步已经跨出了。"
+  - text: "灵魂和身体， 总有一个在路上。"
 
 #me-img: "/img/jetpacktocat.png"
 me-img: "/img/me-calvin.jpg"
@@ -115,22 +115,27 @@ syntax-highlight: True
 ############
 
 events:
-  - image: "/img/timeline/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
-  - image: "/img/timeline/baracktocat.jpg"
-    date: "September 2007 - August 2013"
-    description: "Started coding"
+  - image: "/img/timeline/cisco-logo.png"
+    date: "Mar 2007 - Today"
+    description: "忙着改变世界!"
+#  - image: "/img/timeline/baracktocat.jpg"
+#    date: "September 2007 - August 2013"
+#    description: "Started coding"
+  - image: "/img/timeline/webex.jpg"
+    date: "Nov 2004 - Mar 2007"
+    description: "忙着立足世界！"
+
+
 
 # First image of the Timeline
 
-timeline-img: "/img/timeline/default.png"
+timeline-img: "/img/timeline/me-default.jpg"
 
 ###########
 # Contact #
 ###########
 
-email: "your@email.here"
+email: "1078216421@qq.com"
 
 ################
 # Author Blurb #
@@ -140,7 +145,7 @@ email: "your@email.here"
 # This works best when your author blurb image has a transparent background, or matches your site background color.
 
 # if the author_blurb is not set, then this feature is skipped
-author_blurb: "John Smith is an awesome person. He lives in Flatland, where he works on two-dimensional engineering projects. In his spare time, John likes to eat cotton candy."
+author_blurb: "Calvin Yan is an awesome person. He is a Web and iOS engineer, experienced on Billing. In his spare time, he likes to travel, espacially on self-driving travel."
 author_blurb_image: "/img/author.png"
 
 ##################
@@ -169,7 +174,7 @@ social:
 # GPG on Keybase #
 ##################
 
-keybase-username: johnsmith
+keybase-username: calviny
 keybase-in-social: True
 keybase-in-footer: True
 
