change the background img

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ black-favicon: "/img/black-lab-glass.ico"
 
 #background-img: "../img/intro-bg.jpg"
 
-background-img: "../img/bg_xian.jpg"
+background-img: "../img/bg-westlake.jpg"
 
 ##############################
 # Dynamic Text on the Header #
