--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ events:
   - image: "/img/timeline/webex.jpg"
     date: "Nov 2004 - Mar 2007"
     description: "忙着立足世界！"
-  - image: "/img/timeline/hz-wsgc.jpg"
+  - image: "/img/timeline/hz-westlake.jpg"
     date: "Jul 2000 - Nov 2004"
-    description: "忙着了解杭州！"
+    description: "忙着沉溺杭州！"
   - image: "/img/timeline/hf-university-of-technology.jpg"
     date: "Sep 1996 - Jul 2000"
     description: "忙着研究学问！"
