--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ favicon: "/img/darth-vader.png"
 # Header layout #
 ################
 
-black-favicon: "/img/black-lab-glass.ico"
+black-favicon: "/img/darth-vader-white.png"
 
 #background-img: "../img/intro-bg.jpg"
 
