change the background image to London

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ black-favicon: "/img/darth-vader-white.png"
 
 #background-img: "../img/intro-bg.jpg"
 
-background-img: "../img/bg-westlake.jpg"
+background-img: "../img/bg-england-london.jpg"
 
 ##############################
 # Dynamic Text on the Header #
