update the author pic

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ lines: # You can add HTML Tags in the Text
   - text: "You are confined only by the walls you build yourself."
 
 #me-img: "/img/jetpacktocat.png"
-me-img: "/img/me-calvin.jpg"
+me-img: "/img/author-calvin.jpg"
 
 ##############################
 # Color the browser elements #
