change background back to london

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ black-favicon: "/img/darth-vader-white.png"
 
 #background-img: "../img/intro-bg.jpg"
 
-background-img: "/img/bg-england-oban-5.jpg"
+background-img: "/img/bg-england-london.jpg"
 
 ##############################
 # Dynamic Text on the Header #
