--- a/_includes/open_monitor.yaml
+++ b/_includes/open_monitor.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.1
 info:
   title: Swagger Service Monitoring
-  description: This is the specification for Cisco Webex Service Monitoring API
-  termsOfService: http://wms.webex.com
+  description: This is the specification for Service Monitoring API
+  termsOfService: http://wms.test.com
   contact:
-    email: calviny@cisco.com
+    email: dummy@email.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -13,7 +13,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-- url: https://api-wms.webex.com/v1/
+- url: https://api-wms.dummy.com/v1/
 tags:
 - name: plugin
   description: Everything about your plugins
@@ -258,7 +258,7 @@ paths:
       parameters:
         - name: hostName
           required: true
-          description: e.g. mtsj1mul001.webex.com
+          description: e.g. ta1mul001.test.com
           in: query
           schema:
             type: string
@@ -358,7 +358,7 @@ paths:
           schema:
             type: string
             example:
-              e.g. mtsj1mul001.webex.com
+              e.g. ta1mul001.test.com
         - name: componentType
           required: false
           in: query
@@ -515,7 +515,7 @@ paths:
         description: host name of check
         schema:
           type: string
-          default: e.g. mtsj1mul001.webex.com
+          default: e.g. ta1mul001.test.com
       - name: ipAddress
         in: query
         required: false
@@ -539,7 +539,7 @@ paths:
           application/json:
             schema:
               type: string
-              default: e.g. ['mtsj1mul001.webex.com', 'mtsj1mul002.webex.com']
+              default: e.g. ['ta1mul001.test.com', 'ta1mul002.test.com']
       responses:
         default:
           description: successful operation
@@ -564,7 +564,7 @@ paths:
         required: false
         schema:
           type: string
-          default: e.g. mtsj1mul001.webex.com
+          default: e.g. ta1mul001.test.com
       responses:
         default:
           description: successful operation
@@ -608,7 +608,7 @@ paths:
             application/json:
               schema:
                 type: string
-                default: e.g. ['mtsj1mul001.webex.com', 'mtsj1mul002.webex.com']
+                default: e.g. ['ta1mul001.test.com', 'ta1mul002.test.com']
         responses:
           default:
             description: successful operation
@@ -659,7 +659,7 @@ paths:
         required: false
         schema:
           type: string
-          default: e.g. mtsj1mul001.webex.com
+          default: e.g. ta1mul001.test.com
       responses:
         default:
           description: successful operation
@@ -691,7 +691,7 @@ components:
         targetHost:
           type: string
           description: Target host for testing
-          example: mtsj1mul001.webex.com
+          example: ta1mul001.test.com
         location:
           type: array
           description: Location to initiate the testing. Default to be SJC
@@ -844,7 +844,7 @@ components:
           $ref: '#/components/schemas/Category'
         name:
           type: string
-          example: WebexExeDownload
+          example: testExeDownload
         developer:
           type: array
           items:
@@ -872,7 +872,7 @@ components:
           - bash/shell
         entryPoint:
           type: string
-          example: bin/WebexExeDownload.exe
+          example: bin/testExeDownload.exe
         parameters:
           type: string
           example: -S:#seq# -C:#confid# -U:#username# -P:#password# -T:#timeout#
