--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ social:
   email: calvinyan@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/calviny      # change to your twitter homepage
-    - https://github.com/calviny       # change to your github homepage
+    # - https://twitter.com/calviny      # change to your twitter homepage
+    # - https://github.com/calviny       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
