--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,12 +4,21 @@
 #  © 2020 Cotes Chung
 #  MIT Licensed
 
+# -
+#   type: github
+#   icon: 'fab fa-github-alt'
+# -
+#   type: twitter
+#   icon: 'fab fa-twitter'
 -
-  type: github
-  icon: 'fab fa-github-alt'
+  icon: 'fab fa-weibo'
+  url: 'http://weibo.com/calviny'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+  icon: 'fab fa-weixin'
+  url: 'skywalker_zj'
+-
+  icon: 'fab fa-facebook'
+  url: 'https://www.facebook.com/calvin.yan.56'
 -
   type: email
   icon: 'fas fa-envelope'
@@ -21,8 +30,8 @@
 
 # Uncomment and complete the url below to enable more contact options
 # -
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your mastodon account page
+#   icon: 'fab fa-weibo'   # icons powered by <https://fontawesome.com/>
+#   url:  'http://weibo.com/calviny'                  # Fill with your mastodon account page
 # -
 #   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Linkedin homepage
