update contact and share

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -12,7 +12,7 @@
 #   icon: 'fab fa-twitter'
 -
   icon: 'fab fa-weibo'
-  url: 'http://weibo.com/calviny'
+  url: 'http://weibo.com/u/1403082535'
 -
   icon: 'fab fa-weixin'
   url: 'skywalker_zj'
