--- a/_data/share.yml
+++ b/_data/share.yml
@@ -18,9 +18,9 @@ platforms:
     icon: "fab fa-facebook-square"
     link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
   -
-    type: Telegram
-    icon: "fab fa-telegram"
-    link: "https://telegram.me/share?text=TITLE&url=URL"
+    type: Weibo
+    icon: "fab fa-weibo"
+    link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
 
   # Uncomment below if you need to.
   # -
@@ -29,6 +29,6 @@ platforms:
   #   link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
   #
   # -
-  #   type: Weibo
-  #   icon: "fab fa-weibo"
-  #   link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
+  #   type: Telegram
+  #   icon: "fab fa-telegram"
+  #   link: "https://telegram.me/share?text=TITLE&url=URL"
