update posts and description of blog

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: Calvin Yan                          # the main title
 tagline: A software engineer in Hangzhou China.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  Software development, travel posts, ideas.
+  Software development, travel, posts, chatGPT. 
 
 # Replace with the website url, e.g. 'https://username.github.io'
 url: 'https://hicalvin.github.io'
